2004-12-03 Mikhail Khodjaiants
	Fix for bug 62659: Unable to set default for register format via plugin_customization.ini.
	* CDebugCorePreferenceInitializer.java: new
	* plugin.xml

2004-12-03 Mikhail Khodjaiants
	Fix for bug 80106: Terminating during stepping state caused exception in CDT.
	* CThread.java

2004-12-01 Mikhail Khodjaiants
	Partial fix for bug 77444: CDT does not handle address breakpoints across sessions.
	* CBreakpointManager.java
	
2004-12-01 Mikhail Khodjaiants
	Fix for bug 80034: Expressions view does not display correct no. of elements in array.
	* CValueFactory.java

2004-12-01 Mikhail Khodjaiants
	Fix for bug 79454: Unable to remove a breakpoint set from the gdb console.
	* CBreakpointManager.java

2004-12-01 Mikhail Khodjaiants
	Fix for bug 74043: Overaggressive exception reporting?
	* CBreakpointManager.java

2004-11-26 Mikhail Khodjaiants
	Fix for bug 79608: NPE in CValue.
	* CValue.java

2004-11-26 Mikhail Khodjaiants
	Fix for bug 79377: "Mixed disassembly" should fall back to disassembly w/o source when mixed disassembly fails.
	* Disassembly.java

2004-11-26 Mikhail Khodjaiants
	Fix for bug 79583: Deffered breakpoints and shared library events.
	* CSharedLibraryManager.java

2004-11-25 Mikhail Khodjaiants
	Fix for bug 79452: Unable to set a breakpoint on a class method.
	* CDebugUtils.java: cleanup.
	* CBreakpointManager.java

2004-11-25 Mikhail Khodjaiants
	The "decrementInstallCount" method of IBreakpoint should be called from the UI thread.
	Replaced the "breakpointRemoved" method of ICBreakpointListener by the "breakpointsRemoved"
	method that accepts multiple breakpoints.
	* ICBreakpointListener.java
	* CBreakpointManager.java
	* CBreakpointNotifier.java
	
2004-11-24 Alain Magloire

	Use the ICDITarget.deleteAllBreakpoints() for speed.
	* org/eclipse/cdt/debug/internal/core/CBreakpointManager.java

2004-11-24 Mikhail Khodjaiants
	Do not request to dispose local variables when the target is resumed.
	* CExpression.java